# sgu-transcripts-maintainer

./: .gitignore  README.md  pyproject.toml  sample.env
.github/workflows/: pr.yml
sgu_transcripts_maintainer/: config.py  global_logger.py  main.py  template_environment.py  wiki.py
sgu_transcripts_maintainer/scripts/: add_missing_year_lists.py
